create http://localhost:8080/api/v1/user/gps-status
